Update: add bolder font to submit a work order button

--- a/website_files/work-order.html
+++ b/website_files/work-order.html
@@ -106,11 +106,11 @@
 			</p>
 			<br />
 
-			<div class="work-order-font">
-				<p>
-					The work orders are for repairs at your unit at
-					<span class="underline">common areas/responsibilities</span> such as :
-				</p>
+      <p class="text-center">
+        The work orders are for repairs at your unit at
+        <span class="underline">common areas/responsibilities</span> such as :
+      </p>
+      <div class="work-order-font">
 				<ul>
 					<li>screen repair & replacements</li>
 					<li>front door maintenance & repair</li>
@@ -122,18 +122,18 @@
 			</div>
 
 			<!-- <br /> -->
-			<div class="d-flex justify-content-center py-5">
+			<div class="d-flex justify-content-center pb-5 pt-4">
 				<a
 					href="https://app.clickmaint.com/portal/23ae9c5c-a62b-4ad5-8fe8-1ab95c274547"
 					target="_blank"
 					type="button"
 					class="btn btn-warning btn-lg"
-					>Submit a Work Order</a
+					><span class="bolder">Submit a Work Order</span></a
 				>
 			</div>
 			<!-- <br /> -->
 
-			<p>Here's how to place a work order online:</p>
+			<p class="text-center">Here's how to place a work order online:</p>
 			<ol class="d-flex flex-column align-items-center">
 				<li>Click the yellow "Submit a Work Order" button.</li>
 				<li>Fill out the required fields and submit the form.</li>
