Add Steve Atkins picture to board.html and img folder

--- a/website_files/board.html
+++ b/website_files/board.html
@@ -129,7 +129,7 @@
 							<img
 								class="d-block mx-auto w-100"
 								src="./img/christie_downs_treasurer copy.png"
-								alt="Christie Downs - Treasurer"
+								alt="Dr. Christie Downs - Treasurer"
 							/>
 							<div class="board-name-bg mt-2">
 								<h4>Dr. Christie Downs</h4>
@@ -152,7 +152,7 @@
 						<div class="col-lg-4 member text-center">
 							<img
 								class="d-block mx-auto w-100"
-								src="./img/default-profile-placeholder.png"
+								src="./img/steve_atkins_rsz.jpg"
 								alt="Steve Atkins - Member at Large"
 							/>
 							<div class="board-name-bg mt-2">
